--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,12 @@ body {
   margin-top: 50px;
 }
 
+#home a {
+  padding-left: 10px;
+  color: white;
+  font-size: 25px;
+}
+
 
 /* About Me Section */
 
@@ -78,6 +84,25 @@ body {
 
 #contact {
   margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+#contact p {
+  font-size: 20px;
+}
+
+#contact i {
+  font-size: 30px;
+  padding-right: 15px;
+  margin-top: 20px;
+}
+
+#contact span {
+  font-size: 25px;
+}
+
+#contact a {
+  color: white;
 }
 
 
@@ -86,7 +111,7 @@ body {
 
 @media only screen and (max-width: 576px) {
   #home {
-    margin-top: 90px;
+    margin-top: 150px;
     margin-bottom: 30px;
   }
 
@@ -96,5 +121,15 @@ body {
 
   #about-me {
     margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  #project img {
+    width: 380px;
+  }
+
+  #skills img {
+    width: 100px;
+    height: 100px;
   }
 }
