--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
 
 .garis {
   width: 100px;
@@ -12,17 +11,17 @@
 }
 
 .aldi {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
 }
 
 .navigasi {
-  background-color: #06111E;
+  background-color: #06111e;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #06111E;
+  font-family: "Poppins", sans-serif;
+  background-color: #06111e;
   color: white;
 }
 
@@ -32,14 +31,12 @@ body {
   border-radius: 50%;
 }
 
-
 /* Home Section */
 
 #home {
   margin-top: 150px;
   margin-bottom: 150px;
 }
-
 
 #home h3 {
   margin-top: 50px;
@@ -50,7 +47,6 @@ body {
   color: white;
   font-size: 25px;
 }
-
 
 /* About Me Section */
 
@@ -63,7 +59,6 @@ body {
   font-weight: 300;
 }
 
-
 /* Skill Section */
 
 #skills {
@@ -72,7 +67,7 @@ body {
 }
 
 .skill {
-  color: #06111E;
+  color: #06111e;
 }
 
 .skill img {
@@ -84,8 +79,8 @@ body {
 #project img {
   width: 450px;
   height: 225px;
+  object-fit: cover;
 }
-
 
 /* Contact Section */
 
