--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,15 +27,15 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --biggest-font-size: 1.75rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
-  --tiny-font-size: .625rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
+  --tiny-font-size: 0.625rem;
 
   /*========== Font weight ==========*/
   --font-medium: 500;
@@ -55,8 +55,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -82,10 +82,12 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
-  transition: .4s; /* for light mode animation */
+  transition: 0.4s; /* for light mode animation */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: var(--font-semibold);
 }
@@ -123,10 +125,27 @@ img {
 }
 
 /*=============== THEME ===============*/
+.wrapper-change-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.my-blog {
+  color: var(--first-color);
+  font-weight: var(--font-medium);
+  transition: 0.4s;
+  margin-right: 10px;
+}
+
+.my-blog:hover {
+  color: var(--first-color-alt);
+}
+
 .change-theme {
   font-size: 1.25rem;
   cursor: pointer;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .change-theme:hover {
@@ -146,11 +165,11 @@ body.light-theme {
     the website, in light theme
 ==========*/
 .light-theme .scroll-header {
-  box-shadow: 0 2px 4px hsla(0, 0%, 1%, .1);
+  box-shadow: 0 2px 4px hsla(0, 0%, 1%, 0.1);
 }
 
 .light-theme .nav__menu {
-  background-color: hsla(var(--second-hue), 32%, 90%, .8);
+  background-color: hsla(var(--second-hue), 32%, 90%, 0.8);
 }
 
 .light-theme .section__subtitle,
@@ -159,7 +178,7 @@ body.light-theme {
 }
 
 .light-theme .home__social-link {
-  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, .1);
+  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
 }
 
 .light-theme .footer__social-link {
@@ -183,7 +202,7 @@ body.light-theme {
 }
 
 .light-theme .about__box {
-  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, .1);
+  box-shadow: 0 2px 8px hsla(var(--second-hue), 48%, 8%, 0.1);
 }
 
 .light-theme .footer__link {
@@ -195,7 +214,7 @@ body.light-theme {
 .light-theme .work__card,
 .light-theme .testimonial__card,
 .light-theme .contact__card {
-  box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, .1);
+  box-shadow: 0 2px 16px hsla(var(--second-hue), 48%, 8%, 0.1);
 }
 
 .light-theme::-webkit-scrollbar {
@@ -235,7 +254,7 @@ body.light-theme {
   padding: 4.5rem 0 1rem;
 }
 
-.section__title, 
+.section__title,
 .section__subtitle {
   text-align: center;
 }
@@ -260,7 +279,7 @@ body.light-theme {
   width: 100%;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
-  transition: .4s; /* for light mode animation */
+  transition: 0.4s; /* for light mode animation */
 }
 
 .nav {
@@ -273,7 +292,7 @@ body.light-theme {
 .nav__logo {
   color: var(--first-color);
   font-weight: var(--font-medium);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .nav__logo:hover {
@@ -283,12 +302,12 @@ body.light-theme {
 .nav__menu {
   position: fixed;
   bottom: 1rem;
-  background-color: hsl(var(--second-hue), 32%, 16%, .8);
+  background-color: hsl(var(--second-hue), 32%, 16%, 0.8);
   width: 90%;
   border-radius: 4rem;
   padding: 1rem 2.25rem;
   backdrop-filter: blur(10px);
-  transition: .4s; /* for light mode animation */
+  transition: 0.4s; /* for light mode animation */
 }
 
 .nav__list {
@@ -300,23 +319,24 @@ body.light-theme {
 .nav__link {
   color: var(--text-color);
   font-size: 1.25rem;
-  padding: .4rem;
+  padding: 0.4rem;
   display: flex;
   border-radius: 5rem;
 }
 
 /* Active link */
 .active-link {
-  background: linear-gradient(180deg,
-              hsla(var(--first-hue), var(--sat), var(--lig), 1),
-              hsla(var(--first-hue), var(--sat), var(--lig), .2)
-            );
-  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), .4);
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
+  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), 0.4);
 }
 
 /* Change background header */
 .scroll-header {
-  box-shadow: 0 4px 4px hsla(0, 0%, 4%, .3);
+  box-shadow: 0 4px 4px hsla(0, 0%, 4%, 0.3);
 }
 
 /*=============== HOME ===============*/
@@ -339,7 +359,7 @@ body.light-theme {
 .home__greeting {
   display: block;
   color: var(--title-color);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .home__education {
@@ -359,10 +379,11 @@ body.light-theme {
   justify-self: center;
   width: 190px;
   height: 293px;
-  background: linear-gradient(180deg,
-              hsla(var(--first-hue), var(--sat), var(--lig), 1),
-              hsla(var(--first-hue), var(--sat), var(--lig), .2)
-            );
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
   border-radius: 10rem 10rem 1rem 1rem;
   display: flex;
   align-items: flex-end;
@@ -386,18 +407,18 @@ body.light-theme {
   bottom: 13rem;
   left: 0;
   display: grid;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
 .home__social-link {
   width: max-content;
   background-color: var(--container-color);
   color: var(--first-color);
-  padding: .25rem;
-  border-radius: .25rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
   display: flex;
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .home__social-link:hover {
@@ -406,7 +427,7 @@ body.light-theme {
 }
 
 .home__social::after {
-  content: '';
+  content: "";
   width: 32px;
   height: 2px;
   background-color: var(--first-color);
@@ -436,10 +457,10 @@ body.light-theme {
   display: inline-block;
   background-color: var(--first-color);
   color: var(--body-color);
-  padding: .75rem 1rem;
-  border-radius: .5rem;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
   font-weight: var(--font-medium);
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .button:hover {
@@ -471,20 +492,20 @@ body.light-theme {
 .about__info {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: .5rem;
+  gap: 0.5rem;
   margin-bottom: 2rem;
 }
 
 .about__box {
   background-color: var(--container-color);
-  border-radius: .75rem;
-  padding: .75rem .5rem;
+  border-radius: 0.75rem;
+  padding: 0.75rem 0.5rem;
 }
 
 .about__icon {
   font-size: 1.5rem;
   color: var(--first-color);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .about__title {
@@ -533,7 +554,7 @@ body.light-theme {
 
 .skills__data {
   display: flex;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 
 .skills .bxs-badge-check {
@@ -574,30 +595,30 @@ body.light-theme {
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
   cursor: pointer;
 }
 
 .services__button:hover .services__icon {
-  transform: translateX(.25rem);
+  transform: translateX(0.25rem);
 }
 
 .services__icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 /* Services modal */
 .services__modal {
   position: fixed;
   inset: 0;
-  background-color: hsla(var(--second-hue), 28%, 16%, .7);
+  background-color: hsla(var(--second-hue), 28%, 16%, 0.7);
   padding: 2rem 1rem;
   display: grid;
   place-items: center;
   visibility: hidden;
   opacity: 0;
-  transition: .4s;
+  transition: 0.4s;
   z-index: var(--z-modal);
   overflow-y: auto;
 }
@@ -627,13 +648,13 @@ body.light-theme {
 
 .services__modal-list {
   display: grid;
-  row-gap: .75rem;
+  row-gap: 0.75rem;
 }
 
 .services__modal-item {
   display: flex;
   align-items: flex-start;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 
 .services__modal-icon {
@@ -668,16 +689,16 @@ body.light-theme {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: .75rem;
+  column-gap: 0.75rem;
   margin-bottom: 2rem;
 }
 
 .work__item {
   cursor: pointer;
   color: var(--title-color);
-  padding: .25rem .75rem;
+  padding: 0.25rem 0.75rem;
   font-weight: var(--font-medium);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .work__card {
@@ -688,13 +709,13 @@ body.light-theme {
 
 .work__img {
   border-radius: 1rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .work__title {
   font-size: var(--normal-font-size);
   font-size: var(--font-medium);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .work__button {
@@ -703,16 +724,16 @@ body.light-theme {
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
 }
 
 .work__button:hover .work__icon {
-  transform: translateX(.25rem);
+  transform: translateX(0.25rem);
 }
 
 .work__icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 /* Active item work*/
@@ -723,9 +744,7 @@ body.light-theme {
 
 /*=============== TESTIMONIAL ===============*/
 
-
 /* Swiper class */
-
 
 /*=============== CONTACT ===============*/
 .contact__container {
@@ -747,14 +766,14 @@ body.light-theme {
 .contact__card {
   background-color: var(--container-color);
   padding: 1rem;
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   text-align: center;
 }
 
 .contact__card-icon {
   font-size: 2rem;
   color: var(--title-color);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .contact__card-title,
@@ -768,7 +787,7 @@ body.light-theme {
 
 .contact__card-data {
   display: block;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 
 .contact__button {
@@ -777,16 +796,16 @@ body.light-theme {
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
 }
 
 .contact__button:hover .contact__button-icon {
-  transform: translateX(.25rem);
+  transform: translateX(0.25rem);
 }
 
 .contact__button-icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .contact__form-div {
@@ -806,13 +825,13 @@ body.light-theme {
   color: var(--text-color);
   outline: none;
   padding: 1.5rem;
-  border-radius: .75rem;
+  border-radius: 0.75rem;
   z-index: 1;
 }
 
 .contact__form-tag {
   position: absolute;
-  top: -.75rem;
+  top: -0.75rem;
   left: 1.2rem;
   font-size: var(--small-font-size);
   padding: 0.25rem;
@@ -866,7 +885,7 @@ body.light-theme {
   background-color: var(--container-color);
   color: var(--first-color);
   padding: 0.25rem;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   font-size: 1rem;
   display: inline-flex;
 }
@@ -879,17 +898,16 @@ body.light-theme {
   font-size: var(--smaller-font-size);
 }
 
-
 /*=============== SCROLL BAR ===============*/
 ::-webkit-scrollbar {
   width: 0.6rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   background-color: hsla(var(--second-hue), 8%, 38%);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: hsl(var(--second-hue), 8%, 26%);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -898,238 +916,238 @@ body.light-theme {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (max-width: 320px){
-  .nav__menu{
+@media screen and (max-width: 320px) {
+  .nav__menu {
     padding: 1rem 1.5rem;
   }
 
-  .home__buttons{
+  .home__buttons {
     flex-direction: column;
   }
-  .home__handle{
+  .home__handle {
     width: 150px;
     height: 253px;
   }
-  .home__img{
+  .home__img {
     width: 130px;
   }
 
-  .about__info{
+  .about__info {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .skills__box{
+  .skills__box {
     column-gap: 1rem;
   }
-  .skills__name{
+  .skills__name {
     font-size: var(--small-font-size);
   }
 
-  .services__container{
+  .services__container {
     grid-template-columns: 145px;
     justify-content: center;
   }
 
-  .work__item{
+  .work__item {
     font-size: var(--small-font-size);
   }
-  .work__filters{
-    column-gap: .25rem;
+  .work__filters {
+    column-gap: 0.25rem;
   }
-  .qualification__data{
+  .qualification__data {
     gap: 0.5rem;
   }
-  .qualification__sections{
+  .qualification__sections {
     grid-template-columns: none;
   }
 }
 
 /* For medium devices */
-@media screen and (min-width: 576px){
-  .nav__menu{
+@media screen and (min-width: 576px) {
+  .nav__menu {
     width: 328px;
     left: 0;
     right: 0;
     margin: 0 auto;
   }
 
-  .about__info{
+  .about__info {
     grid-template-columns: repeat(3, 140px);
     justify-content: center;
   }
-  .about__description{
+  .about__description {
     padding: 0 5rem;
   }
 
-  .skills__container{
+  .skills__container {
     justify-content: center;
   }
-  .skills__content{
+  .skills__content {
     padding: 2rem;
   }
 
-  .services__container{
+  .services__container {
     grid-template-columns: repeat(2, 160px);
     justify-content: center;
   }
-  .services__modal-content{
+  .services__modal-content {
     width: 500px;
     padding: 4.5rem 2.5rem 2.5rem;
   }
-  .services__modal-description{
+  .services__modal-description {
     padding: 0 3.5rem;
   }
 
-  .work__container{
+  .work__container {
     justify-content: center;
   }
-  .work__img{
+  .work__img {
     width: 295px;
   }
-  .qualification__sections{
-    grid-template-columns: .6fr;
+  .qualification__sections {
+    grid-template-columns: 0.6fr;
   }
 
-  .contact__info{
+  .contact__info {
     grid-template-columns: 300px;
     justify-content: center;
   }
-  .contact__form{
+  .contact__form {
     width: 360px;
     margin: 0 auto;
   }
 
-  .footer__container{
+  .footer__container {
     margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
   }
   .footer__title,
-  .footer__list{
+  .footer__list {
     margin: 0;
   }
-  .footer__social{
+  .footer__social {
     display: inline-block;
     text-align: center;
   }
-  .footer__link{
+  .footer__link {
     color: var(--title-color);
   }
-  .footer__copy{
+  .footer__copy {
     margin-top: 2rem;
     grid-column: 1 / span 3;
   }
 
-  .show-scroll{
+  .show-scroll {
     bottom: 2rem;
   }
 }
 
-@media screen and (min-width: 767px){
-  .work__container{
+@media screen and (min-width: 767px) {
+  .work__container {
     grid-template-columns: repeat(2, max-content);
   }
 
-  .contact__container{
+  .contact__container {
     grid-template-columns: repeat(2, max-content);
     justify-content: center;
     column-gap: 3rem;
   }
 
-  .qualification__sections{
-    grid-template-columns: .5fr;
+  .qualification__sections {
+    grid-template-columns: 0.5fr;
   }
 }
 
 /* For large devices */
-@media screen and (min-width: 992px){
-  .container{
+@media screen and (min-width: 992px) {
+  .container {
     margin-left: auto;
     margin-right: auto;
   }
 
-  .section{
+  .section {
     padding: 6.5rem 0 1rem;
   }
 
-  .nav{
+  .nav {
     height: calc(var(--header-height) + 1rem);
   }
 
-  .home__handle{
+  .home__handle {
     width: 290px;
     height: 400px;
   }
-  .home__img{
+  .home__img {
     width: 300px;
   }
-  .home__social-link{
+  .home__social-link {
     padding: 0.4rem;
     font-size: 1.25rem;
   }
-  .home__social::after{
+  .home__social::after {
     transform: rotate(90deg) translate(16px, 0);
   }
-  .home__scroll-icon{
+  .home__scroll-icon {
     font-size: 2rem;
   }
-  .about__container{
+  .about__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     column-gap: 4rem;
   }
-  .about__img{
+  .about__img {
     width: 350px;
   }
-  .about__data{
+  .about__data {
     text-align: initial;
   }
-  .about__info{
+  .about__info {
     justify-content: initial;
   }
-  .about__box{
+  .about__box {
     text-align: center;
     padding: 1rem 1.25rem;
   }
-  .about__description{
+  .about__description {
     padding: 0 4rem 0 0;
     margin-bottom: 2.5rem;
   }
-  .skills__container{
+  .skills__container {
     grid-template-columns: repeat(2, 350px);
     column-gap: 3rem;
   }
 
-  .services__container{
+  .services__container {
     grid-template-columns: repeat(2, 192px);
     column-gap: 3rem;
   }
 
-  .services__card{
-    padding: 5rem  2rem 1.5rem;
+  .services__card {
+    padding: 5rem 2rem 1.5rem;
   }
 
-  .work__container{
+  .work__container {
     gap: 3rem;
   }
-  .work__Card{
+  .work__Card {
     padding: 1.25rem;
   }
-  .work__img{
+  .work__img {
     margin-bottom: 1rem;
   }
-  .work__title{
-    margin-bottom: .5rem;
+  .work__title {
+    margin-bottom: 0.5rem;
   }
 
-  .contact__container{
+  .contact__container {
     column-gap: 6rem;
   }
 
-  .footer__social-link{
+  .footer__social-link {
     font-size: 1.25rem;
     padding: 0.4rem;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
   }
 }
